[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/examples/fps/ui/Lobby.gd" id="1_lobby_script"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1_lobby_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = 220.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="ConnectionRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="IpLabel" type="Label" parent="Panel/VBox/ConnectionRow"]
layout_mode = 2
text = "IP"

[node name="IpEdit" type="LineEdit" parent="Panel/VBox/ConnectionRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="Panel/VBox/ConnectionRow"]
layout_mode = 2
text = "Port"

[node name="PortEdit" type="LineEdit" parent="Panel/VBox/ConnectionRow"]
layout_mode = 2
custom_minimum_size = Vector2(90, 0)
text = "8910"

[node name="ButtonsRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HostButton" type="Button" parent="Panel/VBox/ButtonsRow"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="Panel/VBox/ButtonsRow"]
layout_mode = 2
text = "Join"

[node name="StartMatchButton" type="Button" parent="Panel/VBox/ButtonsRow"]
layout_mode = 2
text = "Start Match"
disabled = true

[node name="DisconnectButton" type="Button" parent="Panel/VBox/ButtonsRow"]
layout_mode = 2
text = "Disconnect"
disabled = true

[node name="PlayersLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Players"

[node name="PlayersList" type="ItemList" parent="Panel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 160)

